<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.neptis.go.activities.HeritageActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heritage_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:text="Heritage info..." />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heritage_structuretype"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/structuretype" />

                <TextView
                    android:id="@+id/heritage_historicalperiod"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/historicalperiod" />

                <TextView
                    android:id="@+id/heritage_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/heritage_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/heritage_province"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/province" />

                <TextView
                    android:id="@+id/heritage_region"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/region" />

            </LinearLayout>

            <TextView
                android:id="@+id/heritage_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Heritage description..."
                android:layout_marginBottom="8dp"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/read_reviews_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Read reviews" />

            <Button
                android:id="@+id/submit_reviews_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit a review" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>