<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.example.anna.neptis.activities.LoginActivity"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_login"
            android:id="@+id/UserLogin"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:layout_width="@dimen/width_height_activity_logo"
            android:layout_height="@dimen/width_height_activity_logo"
            android:id="@+id/login_image"
            android:src="@drawable/login_image"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_below="@+id/UserLogin"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regEmail"
            android:hint="@string/etEmail"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/login_image"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regEmail"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPassword"
            android:hint="@string/etPassword"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@id/regEmail"
            android:layout_margin="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@id/regPassword"
            android:layout_below="@+id/regPassword"
            android:id="@+id/tableRow"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textLogin"
                android:id="@+id/bLogin"
                android:layout_weight="0.5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textCancel"
                android:id="@+id/bCancel"
                android:layout_weight="0.5" />

        </TableRow>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"

            android:layout_alignEnd="@+id/tableRow"
            android:layout_alignStart="@+id/tableRow"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/OR" />

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register"
            android:id="@+id/registerHere"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
           android:textSize="13sp"
           android:layout_marginBottom="10dp"
           android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="------------------------ OR --------------------------"
            android:id="@+id/OR"
            android:textSize="12sp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:layout_below="@+id/tableRow"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</ScrollView>