<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.anna.neptis.activities.RegisterActivity"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_register"
            android:id="@+id/UserSignIn"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:layout_width="@dimen/width_height_activity_logo"
            android:layout_height="@dimen/width_height_activity_logo"
            android:id="@+id/register_image"
            android:src="@drawable/register_user"
            android:adjustViewBounds="false"
            android:layout_below="@+id/UserSignIn"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regEmail"
            android:hint="Username"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:inputType="textPersonName"
            android:layout_below="@+id/register_image"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regEmail"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPassword"
            android:hint="@string/etPassword"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@id/regEmail"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regPassword"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regConfirmPass"
            android:hint="@string/etConfirmPass"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@id/regEmail"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:id="@+id/bRegister"
            android:layout_marginBottom="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>