<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_login"
        android:id="@+id/UserLogin"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:id="@+id/login_image"
        android:src="@drawable/login_image"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_below="@+id/UserLogin"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent" />



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/campi"
        android:id="@+id/tableRow"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/textLogin"
            android:id="@+id/bLogin"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/textCancel"
            android:id="@+id/bCancel"
            android:layout_weight="0.5" />

    </TableRow>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"
        android:id="@+id/registerHere"
        android:layout_below="@+id/tableRow"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:id="@+id/freccia_register"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:src="@drawable/tutorial_freccia_register"
        android:layout_above="@+id/registra"
        android:layout_alignStart="@+id/registra"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/registra"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Se non ti sei ancora registrato, puoi farlo cliccando su Register Here e seguire le indicazioni che si presentano nella nuova pagina."
        android:textSize="13sp"
        android:layout_marginStart="30dp"
        android:textColor="#283593"
        android:layout_below="@+id/registerHere"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="false">

        <Button
            android:id="@+id/avanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:onClick="avanti_login"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ok_icon"
            android:background="@android:color/transparent"
            android:id="@+id/imageButton"
            android:layout_marginStart="27dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/campi"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:padding="5dp"
        android:layout_below="@+id/login_image"
        android:layout_alignStart="@+id/tableRow">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/freccia_tutorial"
            android:id="@+id/freccia2"
            android:layout_below="@+id/regEmail"
            android:layout_alignStart="@+id/freccia" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regEmail"
            android:text="Email"
            android:textSize="20sp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regEmail"

            android:textSize="20sp"
            android:id="@+id/regPassword"
            android:text="Password"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@id/regEmail"
            android:layout_margin="10dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/freccia_tutorial"
            android:id="@+id/freccia"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/regEmail"
            android:layout_marginStart="77dp" />

        <TextView
            android:id="@+id/testo_credenziali"
            android:layout_width="120dp"
            android:layout_height="65dp"
            android:text="Inserire le proprie credenziali e fare click sul bottone login."
            android:textSize="13sp"
            android:textColor="#F44336"
            android:layout_alignBottom="@+id/freccia2"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>


    </RelativeLayout>


</RelativeLayout>